k8s/dateilager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dateilager
  labels:
    app.kubernetes.io/name: dateilager
    app.kubernetes.io/part-of: fusion
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dateilager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dateilager
        app.kubernetes.io/part-of: fusion
    spec:
      containers:
        - name: dateilager
          image: localhost/dateilager:latest
          imagePullPolicy: Never
          ports:
            -  containerPort: 5051
          volumeMounts:
            - name: tls-secret
              mountPath: "/home/main/secrets/tls"
              readOnly: true
      volumes:
        - name: tls-secret
          secret:
            secretName: tls-secret
---
apiVersion: v1
kind: Service
metadata:
  name: dateilager-service
spec:
  selector:
    app.kubernetes.io/name: dateilager
  ports:
    - name: dateilager-grpc
      protocol: TCP
      port: 5051
      targetPort: 5051
