k8s/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusion-manager
  labels:
    app.kubernetes.io/name: fusion-manager
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: fusion
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fusion-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fusion-manager
        app.kubernetes.io/component: manager
        app.kubernetes.io/part-of: fusion
    spec:
      containers:
        - name: manager
          image: localhost/fusion:latest
          imagePullPolicy: Never
          command: ["./fusion"]
          args: ["manager", "-p", "5152"]
          ports:
            -  containerPort: 5152
---
apiVersion: v1
kind: Service
metadata:
  name: fusion-manager-service
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  selector:
    app.kubernetes.io/name: fusion-manager
  ports:
    - name: manager-grpc
      protocol: TCP
      port: 80
      targetPort: 5152
